--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -25,3 +25,5 @@ jobs:
           github_token: ${{ secrets.RELEASE_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
+          retry: 10
+          overwrite: true
